# video-editor

./: bun.lockb  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  bindings.ts  index.tsx  output.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/Components/Video/: Player.tsx  PlayerControls.tsx
src/Stores/: VideoStore.ts
