[package]
name = "feus-video-editor"
version = "1.0.0"
description = "feusanc's Video Editor"
authors = ["feusanc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "protocol-all",
    "dialog-all",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
